--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,6 +31,7 @@
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
     <color name="yellow">#FF0</color>
+    <color name="line_border_color_white_gray">#c0c0c0</color>
 
 
 </resources>
