--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -46,4 +46,10 @@
 
     <!--padding Default-->
     <dimen name="padding_def">10dp</dimen>
+
+    <!--Margin top Default-->
+    <dimen name="margin_top_def">10dp</dimen>
+
+    <!--Line border height-->
+    <dimen name="line_border_height">2dp</dimen>
 </resources>
