--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,11 +22,12 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp">
 
+
             <RelativeLayout
                 android:id="@+id/rly_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
+
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="170dp"
                 android:visibility="visible">
@@ -63,43 +64,22 @@
                     android:text="Login"
                     android:textColor="@color/color_white" />
 
-                <!-- <RadioGroup
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_above="@+id/editText2"
-                     android:layout_alignLeft="@+id/editText"
-                     android:layout_alignStart="@+id/editText"
-                     android:layout_marginBottom="72dp"
-                     android:layout_marginLeft="48dp"
-                     android:layout_marginStart="48dp">
 
-                     <RadioButton
-                         android:layout_width="match_parent"
-                         android:layout_height="match_parent"
-                         android:text="@string/doctor" />
-
-                     <RadioButton
-                         android:layout_width="match_parent"
-                         android:layout_height="match_parent"
-                         android:text="@string/patient" />
-                 </RadioGroup>-->
-
-                          <Button
-                              android:id="@+id/btn_reg"
-                              android:layout_width="match_parent"
-                              android:layout_height="wrap_content"
-                              android:layout_below="@+id/btn_login"
-                              android:layout_marginTop="20dp"
-                              android:background="@drawable/ripple_effect_reg"
-                              android:onClick="onRegistrationClick"
-                              android:text="@string/reg"
-                              android:textColor="@color/color_white" />
+                <Button
+                    android:id="@+id/btn_reg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/btn_login"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/ripple_effect_reg"
+                    android:onClick="onRegistrationClick"
+                    android:text="@string/reg"
+                    android:textColor="@color/color_white" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/tvForgetPassword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/edtPassword"
                     android:layout_marginTop="15dp"
@@ -107,6 +87,37 @@
                     android:text="@string/forget_password"
                     android:textColor="@color/royal_blue"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/edtPassword"
+                    android:layout_toStartOf="@+id/rbGroup"
+                    android:text="Login As " />
+
+                <RadioGroup
+                    android:id="@+id/rbGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/edtPassword"
+
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/rbPatient"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:checked="true"
+                        android:text="@string/patient" />
+
+                    <RadioButton
+                        android:id="@+id/rbDoctor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/doctor" />
+                </RadioGroup>
 
             </RelativeLayout>
 
@@ -151,11 +162,11 @@
 
             <LinearLayout
                 android:id="@+id/ll_sub"
-                android:background="@color/gray_light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="22dp"
+                android:background="@color/gray_light"
                 android:orientation="vertical"
                 android:visibility="gone">
 
