--- a/app/src/main/res/layout/doc_nav_header_home.xml
+++ b/app/src/main/res/layout/doc_nav_header_home.xml
@@ -34,7 +34,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvForgetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvName"
