--- a/app/src/main/res/layout/frag_otp.xml
+++ b/app/src/main/res/layout/frag_otp.xml
@@ -9,8 +9,8 @@
 
     <include layout="@layout/appbar_layout" />
 
-    <EditText
-        android:id="@+id/edtOtpInput"
+    <LinearLayout
+        android:id="@+id/lledtOtpInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -18,16 +18,68 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="172dp"
-        android:ems="10"
-        android:hint="@string/enter_access_number"
-        android:inputType="textPersonName" />
+        android:gravity="center">
+
+        <!--     <EditText
+                 android:id="@+id/edtOtpInput"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+
+                 android:ems="10"
+                 android:hint="@string/enter_access_number"
+                 android:inputType="textPersonName" />-->
+        <EditText
+            android:id="@+id/login_pin_first_edittext"
+            style="@style/pin_edit_text_style"
+
+            android:contentDescription="@string/pin_content_desc" />
+
+        <EditText
+            android:id="@+id/login_pin_second_edittext"
+            style="@style/pin_edit_text_style"
+
+            android:contentDescription="@string/pin_content_desc" />
+
+        <EditText
+            android:id="@+id/login_pin_third_edittext"
+            style="@style/pin_edit_text_style"
+            android:contentDescription="@string/pin_content_desc" />
+
+        <EditText
+            android:id="@+id/login_pin_forth_edittext"
+            style="@style/pin_edit_text_style"
+            android:contentDescription="@string/pin_content_desc" />
+
+        <EditText
+            android:id="@+id/login_pin_hidden_edittext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/pin_content_desc"
+            android:cursorVisible="false"
+            android:gravity="center"
+            android:maxLength="4"
+            android:background="@color/white"
+            android:textColor="#00000000"
+             />
+
+        <!--   <EditText
+               android:id="@+id/login_pin_fifth_edittext"
+               style="@style/pin_edit_text_style"
+               android:contentDescription="@string/pin_content_desc" />
+
+           <EditText
+               android:id="@+id/login_pin_sixth_edittext"
+               style="@style/pin_edit_text_style"
+               android:contentDescription="@string/pin_content_desc" />-->
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/btn_resendOTP"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/edtOtpInput"
+        android:layout_below="@+id/lledtOtpInput"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/resend_otp_btn_shape"
@@ -36,12 +88,12 @@
 
     <Button
         android:id="@+id/btn_changeNo"
-        android:layout_toStartOf="@+id/btn_resendOTP"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/edtOtpInput"
+        android:layout_below="@+id/lledtOtpInput"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="14dp"
+        android:layout_toStartOf="@+id/btn_resendOTP"
         android:background="@drawable/resend_otp_btn_shape"
         android:text="@string/change_mobile_no"
         android:textColor="@color/color_white" />
